Subject: Fixes/Mobile Responsive Message: Adding media queries to handle mobile responsiveness. Adding custom styles to shop page on mobile.

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -31,3 +31,27 @@
     }
   }
   
+  @media(max-width: 720px) {
+
+    .collection-item {
+      display: flex;
+      flex-direction: column;
+      transition: all 0.5s ease;
+      width: 25%;
+      
+      .img {
+        background-size: cover;
+      } 
+
+      &:hover {
+        width: 90%;
+        .collection-footer {
+          opacity: 1;
+        }
+      }
+    }
+      .collection-footer {
+        opacity: 0;
+        transition: all 0.5s ease;
+    }
+  }
