--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -5,3 +5,10 @@
     justify-content: space-between;
   }
   
+  @media(max-width: 720px) {
+    .directory-menu {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+  }
