--- a/src/components/preview-collection/preview-collection.styles.scss
+++ b/src/components/preview-collection/preview-collection.styles.scss
@@ -14,3 +14,12 @@
     }
   }
   
+  @media(max-width: 720px) {
+    .collection-preview {
+      display: flex;
+      flex-direction: column;
+    }
+    .preview {
+      width: 100%;
+    }
+  }
