--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -12,3 +12,9 @@
         justify-content: space-between;
     }
 }
+
+@media(max-width: 720px) {
+    .sign-in {
+        margin-bottom: 4em;
+    }
+}
