--- a/src/components/sign-up/sign-up.styles.scss
+++ b/src/components/sign-up/sign-up.styles.scss
@@ -1,4 +1,4 @@
-.sign-un {
+.sign-up {
     width: 380px;
     display: flex;
     flex-direction: column;
