--- a/src/pages/authenticate/authenticate.styles.scss
+++ b/src/pages/authenticate/authenticate.styles.scss
@@ -4,3 +4,10 @@
     justify-content: space-between;
     margin: 5vw auto;
 }
+
+@media(max-width: 720px) {
+    .authenticate {
+        flex-direction: column;
+        margin-bottom: 3em;
+    }
+}
